--- a/README
+++ b/README
@@ -5,3 +5,5 @@ email: aempirei@gmail.com aempirei@256.bz
 http://www.256.bz/ http://www.twentygoto10.com/
 aim: ambientempire
 git://github.com/aempirei/Chat-Art.git
+
+pnmtoans is just a reworking of a old idea, jpegtochat, that is found in the github too.
